# to-price-list

./: .cpanel.yml  .gitignore  debug_passenger.py  install.bat  passenger_wsgi.py  pyproject.toml  readme.md  reproduce_issue.py  requirements.txt  run.cmd  verify_loading.py
src/: run_server.py
src/price_list/: app.py  dao_panda.py  state.py
src/price_list/other_lists/: amrod_price_list.xlsx
test/: test_price_update_logic.py
